fixed line number shift

--- a/public/styles/languages/programminglanguage.css
+++ b/public/styles/languages/programminglanguage.css
@@ -191,7 +191,7 @@ main {
 
 #lineNumbers li {
   width: 0;
-  height: 2vh;
+  height: 1.9vh;
   padding: 0;
   margin: 0;
   list-style-type: none;
